# jsprint

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  jsprint.py  pyproject.toml  requirements.txt  requirements_dev.txt  settings.sample.json
.githooks/: pre-commit
src/: command.rs  command_helper.rs  commands_processor.rs  extend_issue.rs  extend_issues.rs  extend_sprints.rs  jsprint.rs  main.rs  settings.rs
src/commands/: add_to_sprint.rs  assign.rs  backlog.rs  labels_count.rs  mod.rs  report.rs  reviews.rs  sprint.rs  sprints.rs  use_sprint.rs
src/tests/: commands_processor_test.rs  mod.rs
