[package]
name = "jsprint"
version = "0.1.0"
authors = ["Daniele Esposti <daniele.esposti@gmail.com>"]

[dependencies]
chrono = "0.4.4"
colored = "1.6"
serde = "1.0.66"
serde_derive = "1.0.66"
serde_json = "1.0.21"
rustyline = "1.0.0"

[dependencies.goji]
git = "https://github.com/expobrain/goji.git"
branch = "develop"
# path = "../goji"
